add_executable(two_num two_num.cpp)
add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(search_insert_position search_insert_position.cpp)
add_executable(maximum_subarray.cpp)
add_executable(merge_sorted_array merge_sorted_array.cpp)