add_executable(two_num two_sum.cpp)
add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(search_insert_position search_insert_position.cpp)
add_executable(maximum_subarray maximum_subarray.cpp)
add_executable(merge_sorted_array merge_sorted_array.cpp)
add_executable(best_time_to_buy_and_sell_stock best_time_to_buy_and_sell_stock.cpp)
add_executable(best_time_to_buy_and_sell_stock_ii best_time_to_buy_and_sell_stock_ii.cpp)
add_executable(majority_element majority_element.cpp)
add_executable(two_sum_ii two_sum_ii.cpp)