add_executable(two_num two_sum.cpp)
add_executable(remove_duplicates_from_sorted_array remove_duplicates_from_sorted_array.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(search_insert_position search_insert_position.cpp)
add_executable(maximum_subarray maximum_subarray.cpp)
add_executable(merge_sorted_array merge_sorted_array.cpp)
add_executable(best_time_to_buy_and_sell_stock best_time_to_buy_and_sell_stock.cpp)
add_executable(best_time_to_buy_and_sell_stock_ii best_time_to_buy_and_sell_stock_ii.cpp)
add_executable(majority_element majority_element.cpp)
add_executable(two_sum_ii two_sum_ii.cpp)
add_executable(rotate_array rotate_array.cpp)
add_executable(contains_duplicate contains_duplicate.cpp)
add_executable(contains_duplicate_ii contains_duplicate_ii.cpp)
add_executable(three_sum_closest three_sum_closest.cpp)
add_executable(rotate_image rotate_image.cpp)
add_executable(merge_intervals merge_intervals.cpp)
add_executable(set_matrix_zeroes set_matrix_zeroes.cpp)
add_executable(search_a_2d_matrix search_a_2d_matrix.cpp)
add_executable(sort_colors sort_colors.cpp)
add_executable(find_peak_element find_peak_element.cpp)
add_executable(game_of_life game_of_life.cpp)