add_executable(construct_binary_tree_from_preorder_and_inorder_traversal construct_binary_tree_from_preorder_and_inorder_traversal.cpp)
add_executable(validate_binary_search_tree validate_binary_search_tree.cpp)
add_executable(maximum_depth_of_binary_tree maximum_depth_of_binary_tree.cpp)
add_executable(binary_tree_level_order_traversal_ii binary_tree_level_order_traversal_ii.cpp)
add_executable(binary_tree_zigzag_level_order_traversal binary_tree_zigzag_level_order_traversal.cpp)
add_executable(kth_smallest_element_in_a_bst kth_smallest_element_in_a_bst.cpp)
add_executable(lowest_common_ancestor_of_a_binary_tree lowest_common_ancestor_of_a_binary_tree.cpp)